[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Python Brain_Games"
authors = ["Antipoop <antipoop2000@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
